fix contact box alignment

--- a/styles.css
+++ b/styles.css
@@ -185,33 +185,24 @@ form {
     max-width: 100%;
 }
 
-.form-row {
-    display: flex;
-    flex-direction: column;
-}
-
-.col {
-    flex: 1;
-}
-
 button, input, select, textarea {
     border-radius: .5rem;
     border: 1px solid black;
     font-family: inherit;
     font-size: 100%;
-    padding: .5rem;
+    padding: .5rem 0;
 }
 
 input, textarea {
-    width: 90%;
-    margin: 6px 0;
-    padding: .5rem;
+    width: 100%;
+    margin: .5rem 0;
+    padding: .5rem 0;
 }
 
 #btn-send {
     margin-top: .5rem 0;
     padding: .5rem 1rem;
-    width: 90%;
+    width: 100%;
 }
 
 
